# friendbet-program

./: ADMIN_FUNCTIONS.md  Anchor.toml  Cargo.toml
programs/friendbet/src/: errors.rs  lib.rs  state.rs
programs/friendbet/src/instructions/: claim_funds.rs  close_bet.rs  create_bet.rs  create_bet_for_user.rs  initialize_market.rs  match_bet.rs  settle_bet.rs
programs/solana-betting-system/: Cargo.toml
programs/solana-betting-system/src/: errors.rs  lib.rs  state.rs
programs/solana-betting-system/src/instructions/: claim_funds.rs  close_bet.rs  create_bet.rs  create_bet_for_user.rs  fund_bet.rs  initialize_market.rs  match_bet.rs  mod.rs  settle_bet.rs
sdk/: .npmignore  README.md  example.ts  example_admin_functions.ts  package.json  tsconfig.json
sdk/src/: closeBet.ts  idl.json  index.ts  initializeMarket.ts  solana_betting_system.ts
tests/: solana-betting-system.js
