[package]
description = "Created with Anchor"
edition = "2021"
name = "betfriend"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "betfriend"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
proc-macro2 = "=1.0.94"
pyth-sdk-solana = "0.10.4"
