[package]
description = "Created with Anchor"
edition = "2021"
name = "friendbet"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "friendbet"

[[bin]]
name = "test_feed_id"
path = "../../src/bin/test_feed_id.rs"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
proc-macro2 = "=1.0.94"
pyth-solana-receiver-sdk = "0.6.1"
